@@ -567,6 +567,7 @@ RUBY_EXTERN VALUE rb_mProcess;
 
 RUBY_EXTERN VALUE rb_cObject;
 RUBY_EXTERN VALUE rb_cArray;
+RUBY_EXTERN VALUE rb_cValues;
 RUBY_EXTERN VALUE rb_cBignum;
 RUBY_EXTERN VALUE rb_cClass;
 RUBY_EXTERN VALUE rb_cDir;
